--- a/index.html
+++ b/index.html
@@ -61,58 +61,59 @@
         </section>
 
         <!--features section-->
-        <section class="features-section">
+        <section class="section features-section">
             <div class="container">
                 <h2 hidden>Особенности</h2>
-                    <ul class="card-features">
-                        <li class="card-features__item">
-                            <div class="icon-features">
+                    <ul class="features-section">
+
+                        <li class="features-section__item">
+                            <div class="features-section__icon">
                                 <svg width="70" height="70">
                                     <use href="./images/icons.svg#icon-antenna">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="card-features__title">Внимание к деталям</h3>
-                            <p class="card-features__text">
+                            <h3 class="features-section__title">Внимание к деталям</h3>
+                            <p class="features-section__text">
                                 Идейные соображения, а также начало повседневной работы по формированию позиции.
                             </p>
                         </li>
 
-                        <li class="card-features__item">
-                            <div class="icon-features">
+                        <li class="features-section__item">
+                            <div class="features-section__icon">
                                 <svg width="70" height="70">
                                     <use href="./images/icons.svg#icon-clock">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="card-features__title">Пунктуальность</h3>
-                            <p class="card-features__text">
+                            <h3 class="features-section__title">Пунктуальность</h3>
+                            <p class="features-section__text">
                                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                             </p>
                         </li>
 
-                        <li class="card-features__item">
-                            <div class="icon-features">
+                        <li class="features-section__item">
+                            <div class="features-section__icon">
                                 <svg width="70" height="70">
                                     <use href="./images/icons.svg#icon-diagram">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="card-features__title">Планирование</h3>
-                            <p class="card-features__text">
+                            <h3 class="features-section__title">Планирование</h3>
+                            <p class="features-section__text">
                                 Равным образом консультация с широким активом в значительной степени обуславливает.
                             </p>
                         </li>
 
-                        <li  class="card-features__item">
-                            <div class="icon-features">
+                        <li  class="features-section__item">
+                            <div class="features-section__icon">
                                 <svg width="70" height="70">
                                     <use href="./images/icons.svg#icon-astronaut">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="card-features__title">Современные технологии</h3>
-                            <p class="card-features__text">
+                            <h3 class="features-section__title">Современные технологии</h3>
+                            <p class="features-section__text">
                                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                             </p>
                         </li>
