--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
 
         <!--features section-->
-        <section class="section features-section">
+        <section class="features-section">
             <div class="container">
                 <h2 hidden>Особенности</h2>
                     <ul class="features-section">
